# spicetify-guard

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
tests/: cli.rs  integration_test.rs  simple_test.rs
