[package]
name = "spicetify_boot_guard_smart"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
assert_cmd = "2.1.1"
assert_fs = "1.0"
predicates = "2.1.5"
proptest = "1.9.0"
serde_json = "1.0.145"

[lib]
name = "spicetify_guard_lib"
path = "src/lib.rs"

[[bin]]
name = "spicetify-guard"
path = "src/main.rs"